Eclipse 4.17 (M3) JDT Patch for Groovy-Eclipse: JDT commit 94abb1e
#1139